--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="image">
-        <img src="img.png" alt="loading...">
+        <img id="google" src="img.png" alt="loading...">
     </div>
     <div id="input">
         <form action="https://www.google.com/search">
