--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
         <img id="google" src="img.png" alt="loading...">
     </div>
     <div id="input">
-        <form action="https://www.google.com/search">
+        <form action="https://www.google.com/search" id="form">
             <input type="text" id="textbox" name="query">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
