--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id="input">
         <form action="https://www.google.com/search" id="form">
-            <input type="text" id="textbox" name="query">
+            <input type="text" id="textbox" name='query'>
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
                 <input type="submit" value="I'm Feeling Lucky" class="box">
