--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="input">
         <form id="form">
-            <input type="text" id="textbox" name='query'>
+            <input type="text" id="textbox" name="textbox">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
                 <input type="submit" value="I'm Feeling Lucky" class="box">
