--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
@@ -17,7 +18,7 @@
         <img id="google" src="img.png" alt="loading...">
     </div>
     <div id="input">
-        <form id="form">
+        <form action="www.google.com/search"  id="form">
             <input type="text" id="textbox" name="textbox">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
@@ -40,60 +41,4 @@
     -->
     
 </body>
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getDatabase, set,ref,push,child,onValue,get} from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyDREMNISyygJJLyNW9nDvrxnpCUus7zegQ",
-      authDomain: "clone-fc6b2.firebaseapp.com",
-      databaseURL: "https://clone-fc6b2-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "clone-fc6b2",
-      storageBucket: "clone-fc6b2.appspot.com",
-      messagingSenderId: "554041088263",
-      appId: "1:554041088263:web:a62db0115517496fe18da2",
-      measurementId: "G-7W23V7WJCT"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-
-var messageRef = firebase.database().ref("messages");
-
-document.getElementById("form").addEventListener("submit",submitForm);
-
-function submitForm(e){
-    e.preventDefault();
-
-    var query = getInputVal("textbox")
-
-    saveMessage(query);
-    
-    document.querySelector('.alert').style.display  = 'block';
-
-    setTimeout(function(){
-        document.querySelector('.alert').style.display  = 'none';
-    },3000);
-    document.getElementById("form").reset();
-
-
-}
-
-function getInputVal(id){
-   return document.getElementById(id).value;
-}
-
-function saveMessage(query){
-    var newMessageRef = messageRef.push();
-    newMessageRef.set({
-       query: query
-    });
-} 
-</script>
 </html>
