--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="google" src="img.png" alt="loading...">
     </div>
     <div id="input">
-        <form action="https://www.google.com/search"  id="form">
+        <form action="https://www.google.com/search"  >
             <input type="text" id="textbox" name="textbox">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
