--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
 
@@ -18,8 +17,8 @@
         <img id="google" src="img.png" alt="loading...">
     </div>
     <div id="input">
-        <form action="https://www.google.com/search"  >
-            <input type="text" id="textbox" name="textbox">
+        <form action="https://www.google.com/search">
+            <input type="text" id="textbox" name="query">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
                 <input type="submit" value="I'm Feeling Lucky" class="box">
