--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="input">
         <form action="https://www.google.com/search">
-            <input type="text" id="textbox" name="textbox">
+            <input type="text" id="textbox" name="query">
             <div id="btn">
                 <input type="submit" value="Google Search" class="box">
                 <input type="submit" value="I'm Feeling Lucky" class="box">
